 * Fix: Avoid 503 `AttributeError` when an empty search param `q=` is combined with other filters in the Images index view (Paritosh Kabra)
 * Fix: Fix error with string representation of FormSubmission not returning a string (LB (Ben) Johnston)
 * Fix: Ensure disabled buttons are distinguishable from active buttons in forced colors mode (Anuja Verma)


3.0.1 (16.06.2022)
~~~~~~~~~~~~~~~~~~

 * Add warning when `WAGTAILADMIN_BASE_URL` is not configured (Matt Westcott)
 * Fix: Ensure `TabbedInterface` will not show a tab if no panels are visible due to permissions (Paarth Agarwal)
 * Fix: Specific snippets list language picker was not properly styled (Sage Abdullah)
 * Fix: Ensure the upgrade notification request for the latest release, which can be disabled via the `WAGTAIL_ENABLE_UPDATE_CHECK` sends the referrer origin with `strict-origin-when-cross-origin` (Karl Hobley)
 * Fix: Fix misaligned spinner icon on page action button (LB (Ben Johnston))
 * Fix: Ensure radio buttons / checkboxes display vertically under Django 4.0 (Matt Westcott)
 * Fix: Prevent failures when splitting blocks at the start or end of a block, or with highlighted text (Jacob Topp-Mugglestone)
 * Fix: Allow scheduled publishing to complete when the initial editor did not have publish permission (Matt Westcott)
 * Fix: Stop emails from breaking when `WAGTAILADMIN_BASE_URL` is absent due to the request object not being available (Matt Westcott)
 * Fix: Make try/except on sending email less broad so that legitimate template rendering errors are exposed (Matt Westcott)


3.0 (16.05.2022)
~~~~~~~~~~~~~~~~

 * Phase out special-purpose panel types (`StreamFieldPanel`, `RichTextFieldPanel`, `ImageChooserPanel`, `DocumentChooserPanel`, `PageChooserPanel`, `SnippetChooserPanel`) in favour of `FieldPanel` (Matt Westcott)
 * Implement splitting of rich text blocks within StreamField (Jacob Topp-Mugglestone)
 * Add support for image rendition prefetching (Andy Babic)