@@ -54,9 +54,27 @@ module.exports = {
           'none',
           'unset',
           'transparent',
+          // System colors for forced-colors styling.
+          // See https://drafts.csswg.org/css-color-4/#css-system-colors.
+          'Canvas',
+          'CanvasText',
+          'LinkText',
+          'VisitedText',
           'ActiveText',
-          'Highlight',
+          'ButtonFace',
           'ButtonText',
+          'ButtonBorder',
+          'Field',
+          'FieldText',
+          'Highlight',
+          'HighlightText',
+          'SelectedItem',
+          'SelectedItemText',
+          'Mark',
+          'MarkText',
+          'GrayText',
+          'AccentColor',
+          'AccentColorText',
         ],
       },
     ],
