@@ -125,6 +125,7 @@ Changelog
  * Fix: Avoid 503 `AttributeError` when an empty search param `q=` is combined with other filters in the Images index view (Paritosh Kabra)
  * Fix: Fix error with string representation of FormSubmission not returning a string (LB (Ben) Johnston)
  * Fix: Ensure disabled buttons are distinguishable from active buttons in forced colors mode (Anuja Verma)
+ * Include all CSS system colors in allowed values in Stylelint's declaration-strict-value rule
 
 
 3.0.1 (16.06.2022)
